kdevplatform/sublime/idealtoolbutton.h
@@ -36,6 +36,8 @@ public:
 
     QSize sizeHint() const override;
 
+    QSize minimumSizeHint() const override;
+
 protected:
     void paintEvent(QPaintEvent *event) override;
 
